tests/fixtures/invalid/e001/dangling_ref.spec
behavior validate_input "Test" {
  invariants [nonexistent_invariant]
  contract """test"""
}
